[gd_scene load_steps=6 format=3 uid="uid://b7hq8ip13xbbu"]

[ext_resource type="Script" path="res://cards/scenes/deck_scene.gd" id="1_v055y"]
[ext_resource type="Texture2D" uid="uid://d2gw53ihu5rin" path="res://cards/assets/card.png" id="2_6tw2n"]

[sub_resource type="Gradient" id="Gradient_mxf3j"]
interpolation_mode = 2
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(0.168192, 4.19339e-05, 0.189642, 1, 1, 0.25098, 0.25098, 1, 0.168627, 0, 0.188235, 1)
metadata/_snap_enabled = true
metadata/_snap_count = 2

[sub_resource type="GradientTexture2D" id="GradientTexture2D_cft5c"]
gradient = SubResource("Gradient_mxf3j")
width = 128
height = 190

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iydx7"]
bg_color = Color(0.2, 0.2, 0.2, 0.611765)
corner_radius_top_left = 10

[node name="Deck" type="MarginContainer"]
custom_minimum_size = Vector2(65, 95)
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -95.0
offset_right = 65.0
grow_vertical = 0
size_flags_horizontal = 2
size_flags_vertical = 8
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4
script = ExtResource("1_v055y")

[node name="DrawButton" type="Button" parent="."]
layout_mode = 2
flat = true

[node name="CardBack" type="TextureRect" parent="."]
clip_children = 1
texture_filter = 1
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_6tw2n")
expand_mode = 3

[node name="CardBackTexture" type="TextureRect" parent="CardBack"]
visible = false
custom_minimum_size = Vector2(128, 190)
layout_mode = 0
offset_right = 128.0
offset_bottom = 190.0
mouse_filter = 2
texture = SubResource("GradientTexture2D_cft5c")

[node name="CardNumber" type="Panel" parent="CardBack"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -31.0
offset_top = -27.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 4
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_iydx7")

[node name="CardNumberLabel" type="Label" parent="CardBack/CardNumber"]
layout_mode = 2
offset_left = 6.0
offset_top = 2.0
offset_right = 25.0
offset_bottom = 25.0
size_flags_horizontal = 8
size_flags_vertical = 8
text = "14"
horizontal_alignment = 2
